Fixed problems in creating docker containers with new version of php Added debugging docker images Added a build script Fixed problem with large file uploads Merged updates from tinyfilemanager 2.5.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,8 @@ services:
             - ADMIN_USER=admin
             - ADMIN_PASS=pass
             - ROOT_FS=/opt
-        image: jpralvesatdocker/tinyfilemanager:2.4.4-root
+            - SYSLOG_SERVER=192.168.1.131
+            - SYSLOG_PORT=11514
+            - SYSLOG_PROTO=udp
+            - SYSLOG_JSON=1
+        image: jpralvesatdocker/tinyfilemanager:2.5.2.1
