Added hability to import custom certs.

--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -29,6 +29,9 @@ COPY debug-files/* /var/www/html/
 
 RUN ln -sf tinyfilemanager.php index.php
 
-CMD [ "php", "-S", "[::]:8080", "-t", "/var/www/html" ]
+RUN mkdir /certs
+COPY startup.sh /
+
+CMD [ "sh", "/startup.sh" ]
 
 EXPOSE 8080
